; ModuleID = '/home/carl/AnghaBench/linux/drivers/fpga/extr_socfpga.c_socfpga_fpga_set_bitsl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/fpga/extr_socfpga.c_socfpga_fpga_set_bitsl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socfpga_fpga_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socfpga_fpga_priv*, i32, i32)* @socfpga_fpga_set_bitsl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @socfpga_fpga_set_bitsl(%struct.socfpga_fpga_priv* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.socfpga_fpga_priv*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.socfpga_fpga_priv* %0, %struct.socfpga_fpga_priv** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.socfpga_fpga_priv*, %struct.socfpga_fpga_priv** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @socfpga_fpga_readl(%struct.socfpga_fpga_priv* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = or i32 %12, %11
  store i32 %13, i32* %7, align 4
  %14 = load %struct.socfpga_fpga_priv*, %struct.socfpga_fpga_priv** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @socfpga_fpga_writel(%struct.socfpga_fpga_priv* %14, i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @socfpga_fpga_readl(%struct.socfpga_fpga_priv*, i32) #1

declare dso_local i32 @socfpga_fpga_writel(%struct.socfpga_fpga_priv*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
